use DatatypeConverter for base64